// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Form Wrapper Default 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c10 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c10:focus {
  box-shadow: none;
}

.c10:hover .icon,
.c10:focus .icon {
  color: white;
}

.c10:hover {
  background-color: #2980b9;
}

.c10:focus {
  background-color: #2980b9;
}

.c10:disabled,
.c10:disabled .icon,
.c10:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c10:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 i.margin-left {
  margin-left: 8px;
}

.c2 i.margin-right {
  margin-right: 8px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c7 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c6 > .input > .icon.left {
  margin-left: 16px;
}

.c6 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c9 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="header c0"
  >
    <div
      className="title c1"
      fontWeight="title"
      size={16}
      type="#2f313a"
    />
    <div
      className="cancel c2"
      disabled={false}
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="body c3"
  >
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                First Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                Last Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
  </div>
  <div
    className="footer c9"
  >
    <button
      className="save c10"
      id="form-wrapper-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper With id 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c10 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c10:focus {
  box-shadow: none;
}

.c10:hover .icon,
.c10:focus .icon {
  color: white;
}

.c10:hover {
  background-color: #2980b9;
}

.c10:focus {
  background-color: #2980b9;
}

.c10:disabled,
.c10:disabled .icon,
.c10:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c10:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 i.margin-left {
  margin-left: 8px;
}

.c2 i.margin-right {
  margin-right: 8px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c7 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c6 > .input > .icon.left {
  margin-left: 16px;
}

.c6 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c9 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="an-id"
>
  <div
    className="header c0"
  >
    <div
      className="title c1"
      fontWeight="title"
      size={16}
      type="#2f313a"
    />
    <div
      className="cancel c2"
      disabled={false}
      size={16}
      type="#59636f"
    >
      <span
        id="an-id-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="body c3"
  >
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                First Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                Last Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
  </div>
  <div
    className="footer c9"
  >
    <button
      className="save c10"
      id="an-id-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper With saveButtonProps customization 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 32px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 30px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #ff4411;
  padding: 0 16px;
}

.c10 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c10:focus {
  box-shadow: none;
}

.c10:hover .icon,
.c10:focus .icon {
  color: white;
}

.c10:hover {
  background-color: #dd3311;
}

.c10:focus {
  background-color: #dd3311;
}

.c10:disabled,
.c10:disabled .icon,
.c10:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c10:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 i.margin-left {
  margin-left: 8px;
}

.c2 i.margin-right {
  margin-right: 8px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c7 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c6 > .input > .icon.left {
  margin-left: 16px;
}

.c6 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c9 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="header c0"
  >
    <div
      className="title c1"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="cancel c2"
      disabled={false}
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="body c3"
  >
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                First Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                Last Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
  </div>
  <div
    className="footer c9"
  >
    <button
      className="save c10"
      id="form-wrapper-save"
      onClick={[Function]}
      size="SMALL"
      type="PRIMARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper With title 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c10 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c10:focus {
  box-shadow: none;
}

.c10:hover .icon,
.c10:focus .icon {
  color: white;
}

.c10:hover {
  background-color: #2980b9;
}

.c10:focus {
  background-color: #2980b9;
}

.c10:disabled,
.c10:disabled .icon,
.c10:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c10:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 i.margin-left {
  margin-left: 8px;
}

.c2 i.margin-right {
  margin-right: 8px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c7 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c6 > .input > .icon.left {
  margin-left: 16px;
}

.c6 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c9 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="header c0"
  >
    <div
      className="title c1"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="cancel c2"
      disabled={false}
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="body c3"
  >
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                First Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                Last Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
  </div>
  <div
    className="footer c9"
  >
    <button
      className="save c10"
      id="form-wrapper-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper extended style 1`] = `
.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c11 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c11:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c11:focus {
  box-shadow: none;
}

.c11:hover .icon,
.c11:focus .icon {
  color: white;
}

.c11:hover {
  background-color: #2980b9;
}

.c11:focus {
  background-color: #2980b9;
}

.c11:disabled,
.c11:disabled .icon,
.c11:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c11:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c3 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c3 i.margin-left {
  margin-left: 8px;
}

.c3 i.margin-right {
  margin-right: 8px;
}

.c3 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 > a {
  color: inherit;
}

.c3:hover {
  color: #3498db;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c9 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c8 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c7 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c7 > .input > input,
.select__search .c7 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c7 > .input > textarea {
  padding: 16px;
}

.c7 > .input > input,
.c7 > .input > textarea,
.select__search .c7 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c7 > .input > input::-webkit-input-placeholder,
.c7 > .input > textarea::-webkit-input-placeholder,
.select__search .c7 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c7 > .input > input::-moz-placeholder,
.c7 > .input > textarea::-moz-placeholder,
.select__search .c7 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c7 > .input > input:-ms-input-placeholder,
.c7 > .input > textarea:-ms-input-placeholder,
.select__search .c7 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c7 > .input > input::placeholder,
.c7 > .input > textarea::placeholder,
.select__search .c7 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c7 > .input > input[type="search"],
.c7 > .input > textarea[type="search"],
.select__search .c7 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c7 > .input > input[type="search"]::-webkit-search-cancel-button,
.c7 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c7 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c7 > .input > input[type="search"]::-ms-clear,
.c7 > .input > textarea[type="search"]::-ms-clear,
.select__search .c7 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c7 > .input > input[role="combobox"],
.c7 > .input > textarea[role="combobox"],
.select__search .c7 > .input input[role="combobox"] {
  cursor: pointer;
}

.c7 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c7 > .input > .icon.left {
  margin-left: 16px;
}

.c7 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c7 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c7 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c7 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c7 .input.dropdown {
  cursor: pointer;
}

.c7 input[type="number"] {
  -moz-appearance: textfield;
}

.c7 input[type="number"]::-webkit-inner-spin-button,
.c7 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c7 .prefix,
.c7 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c6 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c6 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 #cancel-button {
  margin: 0 8px;
}

.c5 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c1 .title {
  margin-left: 16px;
}

.c1 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c10 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c4 {
  padding: 16px 16px 0 16px;
}

.c0 {
  background: gainsboro;
}

.c0 .header {
  border: solid 4px maroon;
}

.c0 .header .title {
  font-family: fantasy;
}

.c0 .header .cancel {
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
}

.c0 .body {
  margin: 40px;
}

.c0 .footer {
  border: solid 4px mediumslateblue;
}

.c0 .footer .save {
  opacity: .3;
}

<div
  className="c0"
  id="form-wrapper"
>
  <div
    className="header c1"
  >
    <div
      className="title c2"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="cancel c3"
      disabled={false}
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="body c4"
  >
    <div
      className="c5"
    >
      <div>
        <div
          className="c6"
        >
          <div
            className="wrapped c7"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c8 c9"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                First Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
    <div
      className="c5"
    >
      <div>
        <div
          className="c6"
        >
          <div
            className="wrapped c7"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c8 c9"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                Last Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
  </div>
  <div
    className="footer c10"
  >
    <button
      className="save c11"
      id="form-wrapper-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper extra content 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c10 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c10:focus {
  box-shadow: none;
}

.c10:hover .icon,
.c10:focus .icon {
  color: white;
}

.c10:hover {
  background-color: #2980b9;
}

.c10:focus {
  background-color: #2980b9;
}

.c10:disabled,
.c10:disabled .icon,
.c10:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c10:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 i.margin-left {
  margin-left: 8px;
}

.c2 i.margin-right {
  margin-right: 8px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c7 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c6 > .input > .icon.left {
  margin-left: 16px;
}

.c6 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c9 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="header c0"
  >
    <div
      className="title c1"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="cancel c2"
      disabled={false}
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="body c3"
  >
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                First Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                Last Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
  </div>
  <div
    className="footer c9"
  >
    <button
      className="save c10"
      id="form-wrapper-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Save
    </button>
  </div>
  <div>
    Extra content renders after save button
  </div>
</div>
`;

exports[`Storyshots Form Wrapper in compact container 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c10 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c10:focus {
  box-shadow: none;
}

.c10:hover .icon,
.c10:focus .icon {
  color: white;
}

.c10:hover {
  background-color: #2980b9;
}

.c10:focus {
  background-color: #2980b9;
}

.c10:disabled,
.c10:disabled .icon,
.c10:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c10:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 i.margin-left {
  margin-left: 8px;
}

.c2 i.margin-right {
  margin-right: 8px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c7 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c6 > .input > .icon.left {
  margin-left: 16px;
}

.c6 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c9 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <div
    id="form-wrapper"
  >
    <div
      className="header c0"
    >
      <div
        className="title c1"
        fontWeight="title"
        size={16}
        type="#2f313a"
      >
        Long Title That Should Not Touch The Cancel Button
      </div>
      <div
        className="cancel c2"
        disabled={false}
        size={16}
        type="#59636f"
      >
        <span
          id="form-wrapper-cancel"
          onClick={[Function]}
        >
          Cancel
        </span>
      </div>
    </div>
    <div
      className="body c3"
    >
      <div
        className="c4"
      >
        <div>
          <div
            className="c5"
          >
            <div
              className="wrapped c6"
              disabled={false}
              onClick={[Function]}
              type="text"
            >
              <div
                className="input"
                onMouseDown={[Function]}
              >
                <input
                  className="wrapped"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInvalid={[Function]}
                  type="text"
                  value=""
                />
              </div>
              <div
                className="label"
              >
                <div
                  className="labelText c7 c8"
                  fontWeight="title"
                  letterSpacing="2px"
                  size={14}
                  type="#2f313a"
                >
                  First Name
                </div>
              </div>
            </div>
          </div>
          <div
            className="messagesContainer"
          />
        </div>
      </div>
      <div
        className="c4"
      >
        <div>
          <div
            className="c5"
          >
            <div
              className="wrapped c6"
              disabled={false}
              onClick={[Function]}
              type="text"
            >
              <div
                className="input"
                onMouseDown={[Function]}
              >
                <input
                  className="wrapped"
                  disabled={false}
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInvalid={[Function]}
                  type="text"
                  value=""
                />
              </div>
              <div
                className="label"
              >
                <div
                  className="labelText c7 c8"
                  fontWeight="title"
                  letterSpacing="2px"
                  size={14}
                  type="#2f313a"
                >
                  Last Name
                </div>
              </div>
            </div>
          </div>
          <div
            className="messagesContainer"
          />
        </div>
      </div>
    </div>
    <div
      className="footer c9"
    >
      <button
        className="save c10"
        id="form-wrapper-save"
        onClick={[Function]}
        size="MEDIUM"
        type="SECONDARY"
      >
        Save
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form Wrapper loading 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  width: 100%;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c10 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c10:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c10:focus {
  box-shadow: none;
}

.c10:hover .icon,
.c10:focus .icon {
  color: white;
}

.c10 > .icon.left-icon i::before {
  display: inline-block;
  -webkit-animation: spin 1.1s infinite linear;
  animation: spin 1.1s infinite linear;
}

.c10:hover {
  background-color: #2980b9;
}

.c10:focus {
  background-color: #2980b9;
}

.c10:disabled,
.c10:disabled .icon,
.c10:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c10:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  display: inline-block;
  position: relative;
  font-size: 16px;
  font-weight: 600;
  line-height: 1;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  cursor: pointer;
  color: #59636f;
}

.c2 i.margin-left {
  margin-left: 8px;
}

.c2 i.margin-right {
  margin-right: 8px;
}

.c2 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 a:hover i {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 > a {
  color: inherit;
}

.c2:hover {
  color: #3498db;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  line-height: 16px;
  font-weight: 600;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.c7 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  margin-bottom: 8px;
  float: left;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > .input {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  box-sizing: border-box;
  border: solid 1px;
  border-radius: 4px;
  border-color: rgba(0,0,0,0.16);
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  overflow: auto;
}

.c6 > .input .wrapped {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 > .input > input,
.select__search .c6 > .input input {
  padding: 0 16px;
  height: 46px;
}

.c6 > .input > textarea {
  padding: 16px;
}

.c6 > .input > input,
.c6 > .input > textarea,
.select__search .c6 > .input input {
  min-width: 0;
  border: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  font-family: Lato,sans-serif;
  font-size: 16px;
  color: #2f313a;
  background: none;
}

.c6 > .input > input::-webkit-input-placeholder,
.c6 > .input > textarea::-webkit-input-placeholder,
.select__search .c6 > .input input::-webkit-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::-moz-placeholder,
.c6 > .input > textarea::-moz-placeholder,
.select__search .c6 > .input input::-moz-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input:-ms-input-placeholder,
.c6 > .input > textarea:-ms-input-placeholder,
.select__search .c6 > .input input:-ms-input-placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input::placeholder,
.c6 > .input > textarea::placeholder,
.select__search .c6 > .input input::placeholder {
  color: rgba(0,0,0,0.32);
}

.c6 > .input > input[type="search"],
.c6 > .input > textarea[type="search"],
.select__search .c6 > .input input[type="search"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  padding-left: 8px;
}

.c6 > .input > input[type="search"]::-webkit-search-cancel-button,
.c6 > .input > textarea[type="search"]::-webkit-search-cancel-button,
.select__search .c6 > .input input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.c6 > .input > input[type="search"]::-ms-clear,
.c6 > .input > textarea[type="search"]::-ms-clear,
.select__search .c6 > .input input[type="search"]::-ms-clear {
  width: 0;
  height: 0;
}

.c6 > .input > input[role="combobox"],
.c6 > .input > textarea[role="combobox"],
.select__search .c6 > .input input[role="combobox"] {
  cursor: pointer;
}

.c6 > .input > .icon {
  color: rgba(0,0,0,0.16);
  height: 16px;
}

.c6 > .input > .icon.left {
  margin-left: 16px;
}

.c6 > .input > .icon.dropdown {
  margin-left: 8px;
  margin-right: 16px;
}

.c6 > .input > .clear {
  color: rgba(0,0,0,0.32);
  height: 16px;
  margin-right: 16px;
}

.c6 > .input > .clear:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3498db;
}

.c6 > .input > .clear a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6 .input.dropdown {
  cursor: pointer;
}

.c6 input[type="number"] {
  -moz-appearance: textfield;
}

.c6 input[type="number"]::-webkit-inner-spin-button,
.c6 input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6 .prefix,
.c6 .suffix {
  font-family: Lato,sans-serif;
  font-size: 16px;
  background-color: #f6f8f9;
  color: #2f313a;
  padding: 0 16px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: relative;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c5 >:first-child {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c5 .buttons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 #cancel-button {
  margin: 0 8px;
}

.c4 {
  font-family: Lato,sans-serif;
  margin: 0 0 24px 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid rgba(0,0,0,0.16);
}

.c0 .title {
  margin-left: 16px;
}

.c0 .cancel {
  margin-left: 32px;
  margin-right: 16px;
}

.c9 {
  padding: 16px;
  border-top: 1px solid rgba(0,0,0,0.16);
}

.c3 {
  padding: 16px 16px 0 16px;
}

<div
  id="form-wrapper"
>
  <div
    className="header c0"
  >
    <div
      className="title c1"
      fontWeight="title"
      size={16}
      type="#2f313a"
    >
      Title
    </div>
    <div
      className="cancel c2"
      disabled={false}
      size={16}
      type="#59636f"
    >
      <span
        id="form-wrapper-cancel"
        onClick={[Function]}
      >
        Cancel
      </span>
    </div>
  </div>
  <div
    className="body c3"
  >
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                First Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
    <div
      className="c4"
    >
      <div>
        <div
          className="c5"
        >
          <div
            className="wrapped c6"
            disabled={false}
            onClick={[Function]}
            type="text"
          >
            <div
              className="input"
              onMouseDown={[Function]}
            >
              <input
                className="wrapped"
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInvalid={[Function]}
                type="text"
                value=""
              />
            </div>
            <div
              className="label"
            >
              <div
                className="labelText c7 c8"
                fontWeight="title"
                letterSpacing="2px"
                size={14}
                type="#2f313a"
              >
                Last Name
              </div>
            </div>
          </div>
        </div>
        <div
          className="messagesContainer"
        />
      </div>
    </div>
  </div>
  <div
    className="footer c9"
  >
    <button
      className="save c10"
      disabled={true}
      id="form-wrapper-save"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <i
          className="wg-loading"
        />
      </div>
      Save
    </button>
  </div>
</div>
`;
